Bug 231751 - kspreadsheet:openoffice: Numbers on the each bar is not displayed for column chart in kspread.
Summary: kspreadsheet:openoffice: Numbers on the each bar is not displayed for column ...
Status: VERIFIED FIXED
Alias: None
Product: calligrachart
Classification: Applications
Component: general (show other bugs)
Version: 2.1
Platform: Unlisted Binaries All
: NOR normal
Target Milestone: ---
Assignee: KOffice Bug Wranglers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-28 06:03 UTC by Lassi Nieminen
Modified: 2010-10-12 16:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
Test data created in open office spread (188.52 KB, application/x-zip-compressed)
2010-01-28 06:03 UTC, Lassi Nieminen
Details
Screen shot when viewed in kspread (152.75 KB, image/pjpeg)
2010-01-28 06:04 UTC, Lassi Nieminen
Details
Screen shot when viewed in open office (264.73 KB, image/pjpeg)
2010-01-28 06:04 UTC, Lassi Nieminen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-03-22 12:47:06 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2010-01-28 07:03:47 +0200 ----

Created an attachment
Test data created in open office spread

Test data created in open office

SOFTWARE VERSION:
  Kubuntu 9.04
  Koffice (svn version 1079822)
  Test document (open office): oos_charts_colors.ods

STEPS LEADING TO PROBLEM: 
  1. Open the attached document in open office.
  2. Open the same document in KSpread.
  3. Observe that numbers on each bar is not displayed

EXPECTED OUTCOME:
Numbers should be displayed on each bar
ACTUAL OUTCOME:
Numbers on the each bar is not displayed for column chart in kspread.
FREQUENCY OF OCCURRENCE: 
always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-01-28 07:04:18 +0200 ----

Created an attachment
Screen shot when viewed in kspread



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-01-28 07:04:45 +0200 ----

Created an attachment
Screen shot when viewed in open office



--- Bug imported by faure@kde.org 2010-03-22 12:47  ---

This bug was previously known as _bug_ 154696.

Imported an attachment (id=42168)
Imported an attachment (id=42169)
Imported an attachment (id=42170)
Comment 1 Halla Rempt 2010-03-23 10:46:55 UTC
Not filter but core bugs.
Comment 2 Inge Wallin 2010-05-13 01:40:48 UTC
The numbers are displayed now.
Comment 3 Nandita Suri 2010-07-22 10:18:50 UTC
Checked in rev 1152570.
Numbers are not displayed.
Reopening.
Comment 4 Johannes Simon 2010-10-10 13:56:25 UTC
SVN commit 1184465 by jsimon:

Don't hard-set bubble width every time it is changed but instead do it the other
way around and dynamically determine it when it is asked for.

The first approach set section-specific DataValueAttributes every time the bubble
width changed - which lead to the data-set-wide attributes to get overridden. This
is because to determine the attributes for a data point, the following is done:

DataValueAttributes attrs = d->dataValueAttributes;
if ( d->sectionsDataValueAttributes.contains( section ) )
   attrs = d->sectionsDataValueAttributes[ section ];

BUG: 231751
CCMAIL: bjoern.breitmeyer@kdab.com

 M  +4 -24     DataSet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1184465
Comment 5 Nandita Suri 2010-10-12 16:26:38 UTC
verified in essen rev 1185020.
thanks!