Don't hard-set bubble width every time it is changed but instead do it the other way around and dynamically determine it when it is asked for.

The first approach set section-specific DataValueAttributes every time the bubble
width changed - which lead to the data-set-wide attributes to get overridden. This
is because to determine the attributes for a data point, the following is done:

DataValueAttributes attrs = d->dataValueAttributes;
if ( d->sectionsDataValueAttributes.contains( section ) )
   attrs = d->sectionsDataValueAttributes[ section ];

BUG: 231751
CCMAIL: bjoern.breitmeyer@kdab.com

svn path=/trunk/koffice/; revision=1184465